Fixed collapsing nav bar issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
 /*////////////// Header Layout //////////////*/
 
 header {
-  margin-top: 30px;
-  height: 5.1 em;
+  margin: 25px 0 40px 0;
+  height: 5.1em;
+  width: 100%;
   text-align: center;
+  display: inline-block;
 }
 
 header img {
@@ -12,7 +14,8 @@ header img {
 }
 
 nav {
-  width:inherit;
+  width: 100%;
+  display: inline-block;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
